--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ICHarmonyPrototype">
-        <activity android:name=".HelpActivity"></activity>
+        <activity android:name=".AuthActivity"></activity>
+        <activity android:name=".HelpActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
